// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders form 1`] = `
<div
  data-testid="main-layout"
>
  <div
    className="MainLayout-bar"
  />
  <div
    className="MainLayout-centered"
  >
    <div
      className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
      id="coral"
    >
      <main
        className="ConfirmRoute-container"
      >
        <div
          className="ConfirmRoute-root"
        >
          <form
            autoComplete="off"
            onSubmit={[Function]}
          >
            <div>
              <div>
                <div
                  className="Confirm-title"
                >
                  Confirm your email address
                </div>
                <div
                  className="Confirm-description"
                >
                  Click below to confirm your email address.
                </div>
              </div>
              <div>
                <button
                  className="BaseButton-root Button-base Button-filled Button-fontSizeSmall Button-textAlignCenter Button-fontFamilyPrimary Button-fontWeightPrimaryBold Button-paddingSizeSmall Button-colorPrimary Button-upperCase Button-fullWidth Confirm-submit"
                  data-variant="filled"
                  disabled={false}
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  type="submit"
                >
                  Confirm email
                </button>
              </div>
            </div>
          </form>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`renders missing confirm token 1`] = `
<div
  data-testid="main-layout"
>
  <div
    className="MainLayout-bar"
  />
  <div
    className="MainLayout-centered"
  >
    <div
      className="coral-width-gt-xs coral-width-gte-xs coral-width-gt-mobile coral-width-gte-mobile coral-width-gt-mobileMax coral-width-gte-mobileMax coral-width-gt-sm coral-width-gte-sm coral-width-gte-md coral-width-lte-md coral-width-lt-lg coral-width-lte-lg coral-width-lt-xl coral-width-lte-xl"
      id="coral"
    >
      <main
        className="ConfirmRoute-container"
      >
        <div
          className="ConfirmRoute-root"
        >
          <div>
            <div
              className="Confirm-title"
            >
              Oops Sorry!
            </div>
            <div
              className="CallOut-root CallOut-error CallOut-leftBorder"
            >
              <div
                className="CallOut-container"
              >
                <div
                  className="CallOut-content"
                >
                  <div
                    className="CallOut-title CallOut-titleSemiBold"
                  >
                    <span
                      data-testid="invalid-link"
                    >
                      The specified link is invalid, check to see if it was copied correctly.
                    </span>
                  </div>
                  <div
                    className="CallOut-body"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
